# termacs-java

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
native/: jni.map  termacs_jni.cpp
src/main/java/sciens/termacs/: Application.java  Axis.java  Button.java  ButtonVariant.java  CheckBox.java  ComboBox.java  Container.java  ControlStyle.java  Dialogs.java  Frame.java  HBox.java  Key.java  Label.java  LineEdit.java  ListView.java  Menu.java  MenuBar.java  Native.java  OptionGroup.java  ProgressBar.java  ScrollView.java  SelectMode.java  Sizing.java  StatusBar.java  TextArea.java  Theme.java  VBox.java  Widget.java  Window.java
src/test/java/sciens/termacs/: HeadlessTest.java
